<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ClockCardView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        app:cardCornerRadius="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/AlarmCardTItle"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="87dp"
                android:backgroundTint="#C5C7C9"
                android:text="@string/AlarmEdit" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/AlarmCardTItle"
                android:layout_alignEnd="@id/AlarmCardTItle"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="87dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/AlarmDelete"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/AlarmCardTItle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:text="@string/ClockTimezoneName"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/AlarmCardTimezoneLocalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerInParent="true"
                android:text="@string/TimezoneLocalTime"
                android:textAlignment="center"
                android:textSize="24sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
