<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentAlarm">

    <View
        android:id="@+id/TitleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#219BCC"
        app:layout_constraintBottom_toTopOf="@+id/scrollviewHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FragmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:text="@string/AlarmFragmentTitle"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/TitleView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TitleView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollviewHolder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddAlarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleView"
        app:layout_constraintVertical_bias="0.107" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="155dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/buttonEdit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@+id/alarmIcon"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="56dp"
                            android:layout_marginEnd="-64dp"
                            android:layout_marginBottom="12dp"
                            android:backgroundTint="#C5C7C9"
                            android:text="@string/AlarmEdit" />

                        <Button
                            android:id="@+id/buttonDelete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@+id/alarmSwitch"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginTop="58dp"
                            android:layout_marginEnd="46dp"
                            android:layout_marginBottom="11dp"
                            android:backgroundTint="@android:color/holo_red_dark"
                            android:text="@string/AlarmDelete"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/alarmName1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="7dp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/AlarmTitle1"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/AlarmTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="40dp"
                            android:layout_marginEnd="59dp"
                            android:layout_marginBottom="70dp"
                            android:layout_toStartOf="@+id/alarmSwitch"
                            android:layout_toEndOf="@+id/alarmIcon"
                            android:text="@string/AlarmTime"
                            android:textAlignment="center"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/alarmIcon"
                            android:layout_width="52dp"
                            android:layout_height="50dp"
                            android:layout_below="@+id/alarmName1"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="28dp"
                            android:layout_marginTop="11dp"
                            android:layout_marginBottom="68dp"
                            android:contentDescription="@string/AlarmIcon"
                            android:src="@android:drawable/ic_lock_idle_alarm"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/alarmSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="43dp"
                            android:layout_marginBottom="69dp"
                            android:text="@string/AlarmSwitch" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonAddAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:text="@string/AlarmAddButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>