<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".alarmEditMenu.AlarmEditSettings">

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#219BCC"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alarmEditTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/AlarmEditTitle"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/saveAlarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/AlarmNameTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Alarm Name"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:importantForAutofill="no"
                android:id="@+id/alarmTitleInput"
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:ems="10"
                android:hint="@string/alarmTitleInputFieldText"
                android:inputType="textPersonName" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/alarmDescTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Alarm Description"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/alarmDescInput"
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:ems="10"
                android:hint="@string/alarmDescInputFieldText"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/alarmSaveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

</androidx.constraintlayout.widget.ConstraintLayout>